# Copyright 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("memory_trace") {
  sources = [
    "malloc_trace_provider.cc",
    "malloc_trace_provider.h",
    "memory_trace_manager.cc",
    "memory_trace_manager.h",
    "memory_trace_provider.h",
    "system_trace_provider.cc",
    "system_trace_provider.h",
  ]
}

source_set("chromium_lttng") {
  sources = [
    "../../debug/chromium_lttng_provider.h",
    "lttng/chromium_lttng_provider.c",
  ]
  deps = [ ":lttng_provider" ]
}

source_set("pmtrace_lttng") {
  sources = [
    "../../debug/pmtrace_bundle_provider.h",
    "lttng/pmtrace_bundle_provider.c",
    "lttng/pmtracer.h",
  ]
  deps = [ ":lttng_provider" ]
}

loadable_module("lttng_provider") {
  output_name = "chromium_lttng_provider"
  all_dependent_configs = [
    "//build/config/linux/lttng:lttngust",
  ]
  sources = [
    "../../debug/chromium_lttng_provider.h",
    "../../debug/pmtrace_bundle_provider.h",
    "lttng/chromium_lttng_provider_dl.c",
    "lttng/pmtrace_bundle_provider_dl.c",
  ]
}
