# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("neva") {
  sources = [
    "media_platform_api.cc",
    "media_platform_api.h",
    "media_type_restriction.h",
    "neva_mime_util_internal.h",
    "video_util_neva.cc",
    "video_util_neva.h",
  ]

  deps = [
    "//skia",
    "//third_party/jsoncpp",
  ]

  if (is_webos) {
    deps += [ "//media/base/neva/webos" ]
  } else {
    sources += [
      "neva_mime_util_internal_stub.cc",
    ]
  }
}
