# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("neva") {
  defines = [ "MEDIA_BLINK_IMPLEMENTATION" ]

  deps = [
    "//base",
    "//cc",
    "//components/services/leveldb",
    "//gpu",
    "//media",
    "//media:shared_memory_support",
    "//net",
    "//skia",
    "//third_party/blink/public:blink",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//url",
  ]

  sources = [
    "media_info_loader.cc",
    "media_info_loader.h",
    "media_player_neva_interface.cc",
    "media_player_neva_interface.h",
    "mediaplayerneva_factory.h",
    "mediaplayerneva_factory_stub.cc",
    "stream_texture_interface.h",
    "video_frame_provider_impl.cc",
    "video_frame_provider_impl.h",
    "webmediaplayer_neva.cc",
    "webmediaplayer_neva.h",
    "webmediaplayer_neva_factory.h",
    "webmediaplayer_neva_factory_stub.cc",
    "webmediaplayer_params_neva.cc",
    "webmediaplayer_params_neva.h",
  ]

  if (webos) {
    sources -= [
      "mediaplayerneva_factory_stub.cc",
      "webmediaplayer_neva_factory_stub.cc",
    ]

    deps += [ "//media/blink/neva/webos" ]
  }
}
