# Copyright 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

config("webossystem") {
  libs = [ "luna-service2" ]
}

source_set("webossystem_injection") {

  sources = [
    "luna_service_mgr.cc",
    "luna_service_mgr.h",
    "webossystem_injection.cc",
    "webossystem_injection.h",
  ]

  deps = [
    "//v8",
    "//third_party/blink/public:blink",
  ]

  configs += [
    ":webossystem",
    "//build/config/linux:glib",
  ]

  if (use_lttng) {
    deps += [
      "//base/trace_event/neva:pmtrace_lttng",
    ]
  }
}


