# Copyright 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

source_set("pal_webos_impl") {
  deps = [
    "//base",
    "//neva/webos_impl/luna:luna_client",
    "//neva/emulator:emulator",
    "//neva/pal:pal_gen",
  ]

  defines = ["PAL_IMPLEMENTATION"]

  sources = [
    "pal_webos.cc",
    "pal_webos.h",
    "memorymanager/memorymanager_interface_webos.cc",
    "memorymanager/memorymanager_interface_webos.h",
    "systemlocale/systemlocale_interface_webos.cc",
    "systemlocale/systemlocale_interface_webos.h",
    "../../common_impl/pal/sample/sample_interface_common.cc",
    "../../common_impl/pal/sample/sample_interface_common.h",
  ]
}

