# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//neva/neva.gni")
import("//ui/ozone/ozone.gni")

assert(use_ozone)

source_set("common") {
  sources = [
    "egl_util.cc",
    "egl_util.h",
    "gl_ozone_egl.cc",
    "gl_ozone_egl.h",
    "gpu/ozone_gpu_message_generator.cc",
    "gpu/ozone_gpu_message_generator.h",
    "gpu/ozone_gpu_message_params.cc",
    "gpu/ozone_gpu_message_params.h",
    "gpu/ozone_gpu_messages.h",
    "stub_overlay_manager.cc",
    "stub_overlay_manager.h",
  ]

  public_deps = [
    "//ui/ozone:ozone_base",
  ]

  deps = [
    "//ui/gfx/ipc/color",
    "//ui/gl",
    "//ui/gl:gl_features",
  ]

  data_deps = [
    "//third_party/mesa_headers",
  ]

  visibility = [ "//ui/ozone/platform/*" ]

  # Added for ozone wayland external port
  if (ozone_platform_wayland_external) {
    visibility += [ "//ozone:ozone_wayland", ]
  }
}

if (ozone_platform_gbm) {
  source_set("linux") {
    assert(ozone_platform_gbm)

    sources = [
      "linux/drm_util_linux.cc",
      "linux/drm_util_linux.h",
      "linux/gbm_device_linux.cc",
      "linux/gbm_device_linux.h",
    ]

    deps = [
      "//base:base",
      "//third_party/libdrm",
      "//third_party/minigbm",
      "//ui/gfx:buffer_types",
    ]

    visibility = [ "//ui/ozone/platform/drm/*" ]
  }
}
