# Copyright (c) 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

source_set("neva") {
  public_deps = [
    "//skia:skia",
    "//third_party/blink/public:mojo_bindings",
    "//third_party/boringssl:boringssl",
  ]

  sources = [
    "default_media_state_policy.cc",
    "default_media_state_policy.h",
    "limited_media_activation_count_policy.cc",
    "limited_media_activation_count_policy.h",
    "media_state_manager_impl.cc",
    "media_state_manager_impl.h",
    "media_state_policy.cc",
    "media_state_policy.h",
    "media_state_policy_factory.cc",
    "media_state_policy_factory.h",
  ]
}
