# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/linux/pkg_config.gni")
import("//neva/neva.gni")

pkg_config("media_base_webos_config") {
  packages = [
    "glib-2.0",
    "gmodule-2.0",
    "gobject-2.0",
    "gthread-2.0",
    "luna-service2",
  ]

  if (use_gst_media) {
    packages += [
      "gmp-player-client",
      "gstreamer-1.0",
      "umedia_api",
    ]
  }
}

source_set("webos") {
  deps = [
    "//skia",
  ]
  sources = [
    "lunaservice_client.cc",
    "lunaservice_client.h",
    "media_platform_api_webos.h",
    "neva_mime_util_internal_webos.cc",
  ]
  if (use_gst_media) {
    sources += [
      "media_platform_api_webos_gmp.cc",
      "media_platform_api_webos_gmp.h",
    ]
  } else {
    sources += [
      "media_platform_api_webos_stub.cc",
      "media_platform_api_webos_stub.h",
    ]
  }
  configs += [ ":media_base_webos_config" ]
}
