# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("webos") {
  deps = [
    "//media",
    "//third_party/blink/public:blink",
  ]

  sources = [
    "mediaplayer_ums.cc",
    "mediaplayer_ums.h",
    "mediaplayerneva_factory_webos.cc",
    "webmediaplayer_mse.cc",
    "webmediaplayer_mse.h",
    "webmediaplayer_neva_factory_webos.cc",
    "webos_mediaclient.h",
  ]

  if (use_gst_media) {
    sources += [
      "umediaclient_gmp_impl.cc",
      "umediaclient_gmp_impl.h",
    ]
    defines = [ "UMS_INTERNAL_API_VERSION=2" ]
  } else {
    sources += [
      "webos_mediaclient_stub.cc",
      "webos_mediaclient_stub.h",
    ]
  }
}
